# LangGraph-Gold-E-Mail-Agent

./: .gitignore  README.md
agent/: .env.example  .gitignore  pyproject.toml  run.ps1
agent/app/api/: endpoints.py  main.py
agent/app/core/: graph.py  schemas.py  settings.py
agent/app/prompts/: templates.py
agent/app/services/: crawler.py  llm_factory.py  parser.py
agent/tests/: __init__.py  conftest.py  test_crawler.py  test_crawler_smoke.py
client/: README.md  index.html  tailwind.config.ts
client/src/: index.css
client/src/components/: AgentCard.tsx  CanvasFlow.tsx  FinalEmailCard.tsx
client/src/hooks/: useCopyToClipboard.ts  useEmailGeneration.ts
client/src/pages/: Index.tsx
client/src/types/: api.ts
client/src/utils/: textProcessing.ts
docs/: ARCHITECTURE.md
